<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:title="@string/message" />

        <item
            android:id="@+id/zhihu"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_zhihu"
            android:title="@string/Zhihu" />

        <item
            android:id="@+id/wechat"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_wechat"
            android:title="@string/wechat" />

        <item
            android:id="@+id/gank"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_gank"
            android:title="@string/gank" />

        <item
            android:id="@+id/gold"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_gold"
            android:title="@string/gold" />

        <item
            android:id="@+id/V2EX"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_vtex"
            android:title="@string/V2EX" />
    </group>
    <group>
        <item android:title="@string/option" />

        <item
            android:id="@+id/like"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_like"
            android:title="@string/like" />

        <item
            android:id="@+id/setting"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_setting"
            android:title="@string/setting" />

        <item
            android:id="@+id/about"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_about"
            android:title="@string/about" />


    </group>

</menu>